<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/bar_padding_left"
    android:paddingRight="@dimen/bar_padding_right"
    android:background="@color/bar_bg_color">

    <TextView
        android:id="@+id/bar_home_address"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bar_height"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/ic_place_white"
        android:gravity="center_vertical"
        android:text="@string/home_bar_lbs"
        android:textColor="@color/bar_text_color"
        android:textSize="@dimen/big_small_text" />

    <TextView
        android:id="@+id/bar_home_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bar_height"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/home_bar_title"
        android:textColor="@color/bar_text_color"
        android:textSize="@dimen/big_medium_text" />

    <TextView
        android:id="@+id/bar_home_demand"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bar_height"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:text="@string/home_bar_demand"
        android:textColor="@color/bar_text_color"
        android:textSize="@dimen/big_small_text" />

</RelativeLayout>