<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context="com.dmd.zsb.ui.activity.SignInActivity">
    <FrameLayout
        android:id="@+id/signin_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:src="@drawable/logo"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="60dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ico_phone" />

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:ems="14"
                    android:hint="@string/mobile_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textColorHint="#B9B9B9"
                    android:textColor="#ffffff"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9B9B9" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ico_password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textColorHint="#B9B9B9"
                    android:textColor="#ffffff"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9B9B9" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/c1_apply_btn_select"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#ffffff" />


            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom|center"
                android:text="@string/no_account_now_signup"
                android:textColor="#5B5B5B"
                android:textSize="18dp" />
        </LinearLayout>

    </ScrollView>
    </FrameLayout>
</LinearLayout>
