<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.dmd.zsb.ui.activity.ReleaseOrderActivity">

    <include layout="@layout/bar_for_release_order" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/feed_item_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/price_scope"
                        android:textColor="#666666"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#cccccccc" />

                    <EditText
                        android:id="@+id/publish_order_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:inputType="numberDecimal"
                        android:maxLength="8"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:hint="0"
                        android:textColor="#333333"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/yuan"
                        android:textColor="#333333"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/feed_item_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/appointment_time"
                        android:textColor="#666666"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#cccccccc" />

                    <TextView
                        android:id="@+id/publish_order_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|right"
                        android:singleLine="true"
                        android:textColor="#333333"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/feed_item_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/appoint_location"
                        android:textColor="#666666"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#cccccccc" />

                    <EditText
                        android:id="@+id/publish_order_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:paddingRight="20dp"
                        android:singleLine="true"
                        android:textColor="#333333"
                        android:textSize="16dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/publish_order_text"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/feed_item_bg"
                    android:gravity="top|left"
                    android:hint="备注（可选）"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:textColor="#333333"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/publish_order_publish"
                    android:layout_width="fill_parent"
                    android:layout_height="55dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/c1_apply_btn_select"
                    android:text="@string/publish_order"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>
